--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <title>GeoJSON viewer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="css/leaflet.css">
-    <script src="js/leaflet.js"></script>
+    <link rel="stylesheet" href=".css/leaflet.css">
+    <script src=".js/leaflet.js"></script>
     <style>
         html, body {
             height: 100%;
